# machine-learning-vacancies-analysis

./: .dockerignore  .env.sample  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.dvc/: config
data/interim/: data.csv.dvc
data/raw/: .gitignore  dump_ml_data_vacancies.csv.dvc
docs/source/: conf.py  index.rst
notebooks/: model_linear.ipynb
src/vacancies/: scrapy.cfg
src/vacancies/vacancies/: items.py  middlewares.py  pipelines.py  settings.py
src/vacancies/vacancies/spiders/: vacancies.py
